src/components/Header.css
.Header {
  height: 63px;
  position: fixed;
  top: 0;
  left: 1rem;
  right: 1rem;
  padding: 1.5rem 1rem 0 1rem;
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid black;
  font-style: italic;
  transform: translateY(0);
  transition: transform 0.3s ease;
  background-color: var(--color-background);
}

.Header.--hidden {
  transform: translateY(-110%);
}

.Header a {
  text-decoration: none;
  color: black;
}

.Header__ReturnLink {
  cursor: pointer;
}

